--- a/outputs/references.bib
+++ b/outputs/references.bib
@@ -18,3 +18,24 @@
     doi = {10.21105/joss.01686},
   }
   
+  
+  @Book{citeggplot2,
+    author = {Hadley Wickham},
+    title = {ggplot2: Elegant Graphics for Data Analysis},
+    publisher = {Springer-Verlag New York},
+    year = {2016},
+    isbn = {978-3-319-24277-4},
+    url = {https://ggplot2.tidyverse.org},
+  }
+  
+    @Article{citeglmnet,
+    title = {Regularization Paths for Generalized Linear Models via Coordinate Descent},
+    author = {Jerome Friedman and Trevor Hastie and Robert Tibshirani},
+    journal = {Journal of Statistical Software},
+    year = {2010},
+    volume = {33},
+    number = {1},
+    pages = {1--22},
+    url = {http://www.jstatsoft.org/v33/i01/},
+  }
+  
