--- a/outputs/report.Rmd
+++ b/outputs/report.Rmd
@@ -47,6 +47,8 @@ In my analysis, the goal is to predict the popular vote outcome for the 2020 Ame
 
 
   The model I have chosen to use is a generalized linear model which is a binary logistic regression model. I created 2 different models, in order to predict a result for response variables *vote_trump* or *vote_biden*. I decided to choose this model because my outcome variable in the model is a binary response variable which I had given value of either 0 or 1, and thus, a logistic regression would make most sense. My binary response variable is dependent on some predictor variables which I obtained using model selection techniques. Before model selection, I determined which variables I had to use which were present in my survey data and census data, because they had to match in order to perform post-stratification. I performed both AIC and BIC model selection, and determined the most significant variables. I compared models using the ANOVA in order to determine the model with the least residuals, and to determine significant predictors one-by-one after the AIC and BIC selection techniques. The link used in this model is the logit link. The assumptions for this model are satisfied. The cases are independent in both the survey and census data, since each person was interviewed once. The dependent variable is distributed by a binomial distribution. The model I chose is shown below: 
+  
+  My model is based on the predictors race, hispanic or not, state, education, foreign born or not, gender, and age group. I decided to use age group because it made sense to group related age groups together, and would simplify the model. Typically, the people in the age groups I made would have similarities between them, and this would be important for voting. The model converges and has significant pvalues. This model had the smallest residual deviance. 
 
 
 $$ logit(\pi_i) = \beta_0+\beta_1  x_{AgeGroup} + \beta_2  x_{Race} +\beta_3  x_{hispanic} +\beta_4  x_{state} +\beta_5  x_{education} +\beta_6  x_{Foreign Born} +
@@ -86,6 +88,8 @@ logmodelbiden<-glm(formula = vote_biden ~ state+ education+ foreign_born+gender+
   Post-stratification is a statistical technique which allows a model to be used on a new dataset, and allows estimates to be corrected according to their sampling weights. Then, an estimate is calculated for the entire population. The estimate can be calculated for the prediction model, which can be very useful in modeling behaviour or other various outcomes, and determining an estimate to make important future decisions.In my analysis, this allows me to estimate the proportion of voters who will vote for Donald Trump and in the second calculation, the proportion of voters who will vote for Joe Biden.  
 
   I will be using a post-stratification technique which allows me to use my model on the census dataset to predict estimates for certain groups that I have chosen. I will use the weight of each estimate for each group and determine the population level estimate, and this is very useful to allow a model to be used for prediction purposes and weight each estimate. This means bias will decrease because underrepresented groups will be adjusted for with the sample weight, and also leads to smaller variance. This leads to a more accurate prediction. 
+  
+  An important note is that before the cells were split, I removed the datapoints with ages less than 18 because they are not able to vote, and 1 datapoint of age 95+, because it was a new factor level that my original model did not have. There were some additional states that were introduced in the census data, which my original survey data did not have, thus, I could not use those new states, since my model did not have them as a factor level. 
 
   In this model, first I split the cells by age group, gender, state, race, education, whether Hispanic or not, and whether foreign born or not. I will partition the census data into demographic cells by grouping them based on my predictors which are age group, gender and state.  These groups of these cells allow an estimate for each possible group (each datapoint/row) by using my model to obtain and estimate, and then I weight the estimate by its relative proportion within the whole population and aggregate all estimates to population level estimates. I weight each estimate by its population size of the bin, and find the sum of all these values for each bin. Finally, I divide this summation by the total population count. 
   
